# logjuicer

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitreview  .zuul.yaml  CHANGELOG.md  Cargo.toml  README.md  README.rst  bench.py  bindep.txt  flake.nix  logreduce.spec  requirements.txt  setup.cfg  setup.py  shell.nix  test-requirements.txt  tox.ini
cache/: Cargo.toml
cache/src/: cache.rs
cli/: Cargo.toml
cli/src/: dataset.rs  main.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: cache.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: dataset.rs  downloader.rs  main.rs  serve.rs
crates/errors/: Cargo.toml  README.md
crates/errors/src/: errors_parser.rs
crates/generate/: Cargo.toml  README.md
crates/generate/src/: generate.rs
crates/httpdir/: Cargo.toml  README.md
crates/httpdir/src/: httpdir.rs
crates/index/: Cargo.toml  README.md
crates/index/benches/: bench-index.rs
crates/index/src/: index.rs  traits.rs  vstack.rs
crates/iterator/: Cargo.toml  README.md
crates/iterator/src/: iterator.rs
crates/journal/: Cargo.toml
crates/journal/src/: journal.rs
crates/model/: Cargo.toml  README.md
crates/model/benches/: bench-model.rs
crates/model/src/: config.rs  env.rs  errors.rs  files.rs  filter.rs  journal.rs  model.rs  process.rs  prow.rs  reader.rs  similarity.rs  source.rs  timestamps.rs  unordered.rs  urls.rs  zuul.rs
crates/model/tests/: model_test.rs  sf-operator-hiearchy-group.txt  sf-operator-hiearchy.txt
crates/prow/: Cargo.toml  README.md
crates/prow/src/: prow_build.rs
crates/python/: Cargo.toml  README.md  setup.py
crates/python/benches/: bench-index.py  bench-tokenizer.py
crates/python/src/: bindings.rs
crates/report/: Cargo.toml  build.rs  schema.capnp
crates/report/benches/: bench-report.rs
crates/report/src/: codec.rs  model_row.rs  report.rs  report_row.rs
crates/static-html/: Cargo.toml  README.md
crates/static-html/src/: render.rs  static_html.rs
crates/systemd-journal-reader/: Cargo.toml  README.md
crates/systemd-journal-reader/src/: journal-reader.rs  systemd-journal-reader.rs
crates/tokenizer/: Cargo.toml  README.md
crates/tokenizer/benches/: bench-tokenizer.rs
crates/tokenizer/src/: index_name.rs  tokenizer.rs
crates/tokenizer/tests/: files-list.txt  index-list.txt  index_tests.rs
crates/web/: .gitignore  Cargo.toml  README.md  Trunk.toml  dev.html  index.html  style.css  tailwind.config.js
crates/web-service/: Cargo.toml  README.md
crates/web-service/.sqlx/: query-0f23f6f82e367ba9181ff4b58cecfb421e4b3a1103062aea71ecc68f11dbddb9.json  query-1923c2519a57e5a593ed3031a8ae90ec4f5d22e57f137b172d5d9ed8e5bfb0ee.json  query-1e8df02fa654db09219d7bf95fbb744ac5c73bdfa96e0ae796a74d77dda6ea7c.json  query-2ff8726ffb656b77f687a69dcb5c88ebf62da22c1187a4255a235ec3db7e828a.json  query-345ff918a82a58aac8eec2de5165dd481cb36a5b33c39f0ad794625a126ccfd3.json  query-3930fb204d0c121c907f6b59711213216b7bb03ee521656e0169eb3a440e074d.json  query-4df8b00b533f4839d35b34b5fe81707c28bdaab9586b804815249c1d364b17ec.json  query-4fcef645f4f8c74a5316c4dd7ff0886706e7ddd7cad8d268c430f5aeb057b2dc.json  query-6199f8dd4e451bdc4e05d539cee964281d8c83647e17e8be0d54bfdaf1914377.json  query-62febcdf2d247e0d904a2228e8a5c61adff34d6aec1ef0a4e2a9ca4bac236e37.json  query-6640e2561d88ac080249cdaadb0c8afab91f600ff5ac373a80482793a64ba75d.json  query-671bc9f6153e09b18bee2c1eeea0c39d729c3c883b8d623eb088ac89fa793f1b.json  query-6d0a90024de43b48db71cc4ffd1da4f377c8b06efb84a7e0e54d373b5ea4e23c.json  query-6d2617eb9194ac486d9144fb98387ee2ffa450f4dbd2ad582b9437978afba6e4.json  query-70b62caf9f4324f1d58e588cb8d9f8484710a0bf6bfe496e07d0768eae96ef8c.json  query-72e3f9ae5b63ab5008a20a278631ea818f316408c097173c3943d2e6f71fd883.json  query-7a3d88fe6b0008895dad7aab0510c8603631e192cbd94c7e74b92775c57f309b.json  query-83c20823d79b58e7eafb19bde539b6f3b3066280dfab60f350418461eb8ce119.json  query-886bf68a8ef824a7fc3eee7e480d9561d79a8d3a23b7331f8ad59f2df1e172ec.json  query-9519f07cdff3aed3a7d853f56864e2b440a5ac5629f09cf7a9091f43394e120e.json  query-9ab54794c8fa8e2331d093400194673e11bc103081c161ebb97e154b61d0f2d5.json  query-9df92605294e92b28385b1875d14de727c10ec0c5de1792c969ac68488ab1304.json  query-9f153c0b8f000837a61f139742edc62d51dc27854d701bc547b25af0e771daa3.json  query-b05ea3d19c70abf9c12145990a1c1c2cffaa953910efc6d3bf45145e822bfcc8.json  query-b13bfe7452f6cb0cec148288997b3352bfdb2ab231498b8b58b815860af89d97.json  query-b716cae041bb90c579d732f6a4a916962578772497be7412d6177806decafec6.json  query-bc9a9b4c0c1b2f87350ae1cca441b0b08cccbd6f1b52b118b77dd471a279f639.json  query-c29f9d91543938ddb2add020ccf06834d6b8e8a86814a105ab3b846aafe0318b.json  query-c82af2a257b8b2b6cc85d21f1ed9300a2c83a02d13777c24691969835a6934f1.json  query-cbb2baff07508ee84cbae605f51eeca269b54b44bdfa68df455399a3bdc288b9.json  query-e912961fa9a53627bf6aa5d6d2f4cacc470d94202a39732c69f6b678ab64c864.json  query-ee9a37ea3c02747aa53c33041cdcd872ff3ea37bd021c9abccbd22a5e8d16600.json  query-fdf21d9ef7131129e382678e1935f2cc7593e3cdc8326168397e6818a10bf136.json
crates/web-service/migrations/: 20231004_reports.sql  20240417_models.sql  20240423_sizes.sql  20251021_errors.sql
crates/web-service/src/: api.rs  database.rs  models.rs  routes.rs  tests.rs  web-service-main.rs  worker.rs
crates/web/src/: dom_api.rs  dom_report.rs  dom_similarity.rs  dom_utils.rs  (+3 more)
crates/zuul/: Cargo.toml  README.md
httpdir/: Cargo.toml
httpdir/src/: httpdir.rs
index/: Cargo.toml
index/benches/: bench-index.rs
index/src/: index.rs
iterator/: Cargo.toml
iterator/src/: iterator.rs
model/: Cargo.toml
model/benches/: bench-model.rs
model/src/: files.rs  model.rs  process.rs  reader.rs  urls.rs  zuul.rs
model/tests/: model_test.rs
python/: Cargo.toml  setup.py
python/benches/: bench-index.py  bench-tokenizer.py
python/src/: bindings.rs  lib.rs
report/: Cargo.toml
report/src/: render.rs  report.rs  style.css
tokenizer/: Cargo.toml
tokenizer/benches/: bench-tokenizer.rs
tokenizer/src/: lib.rs  tokenizer.rs
zuul/: Cargo.toml
zuul/src/: zuul-build.rs
(+111 files in other folders)
