[workspace]
members = [
  "crates/iterator",
  "crates/tokenizer",
  "crates/index",
  "crates/model",
  "crates/report",
  "crates/zuul",
  "crates/prow",
  "crates/static-html",
  "crates/cache",
  "crates/httpdir",
  "crates/cli",
  "crates/generate",
  "crates/web",
  "crates/web-service",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
documentation = "https://docs.rs/logreduce/"
authors = ["TristanCacqueray"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1.0"
bytes = "1"
itertools = "0.11"
xdg = "2"
threadpool = "1"
regex = "1"
lazy_static = "1"
walkdir = "2"
chrono = { version = "0.4.31", features = ["serde"] }
html-builder = "0.5"
time-humanize = "0.1"
smol_str = { version = "0.2", features = ["serde"] }

# index
sprs = { version = "0.11", features = ["serde"] }

# network
url = "2"
ureq = { version = "2", default-features = false, features = ["tls", "json", "gzip", "brotli"] }
rustls = { version = "0.21" }

# serde
serde_yaml = "*"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
tracing-chrome = "0.7"

# algo
fxhash = "0.2"
flate2 = "1"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

# cli
clap = { version = "4", features = ["derive"] }
atty = "0.2"

# tests
criterion = "0.5"
mockito = "1"
tempfile = "*"
goldenfile = "1"

[profile.release]
lto = true
opt-level = 's'
# Perform optimizations on all codegen units.
codegen-units = 1
