[workspace]
members = [
  "crates/iterator",
  "crates/tokenizer",
  "crates/errors",
  "crates/index",
  "crates/model",
  "crates/report",
  "crates/zuul",
  "crates/prow",
  "crates/systemd-journal-reader",
  "crates/httpdir",
  "crates/cli",
  "crates/generate",
  "crates/web",
  "crates/web-service",
]
resolver = "2"

[workspace.package]
version = "0.14.0"
license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
documentation = "https://docs.rs/logjuicer/"
authors = ["TristanCacqueray"]
edition = "2021"

[workspace.dependencies]
anyhow = "*"
thiserror = "*"
bytes = "1"
itertools = "0.12"
threadpool = "1"
regex = "1"
lazy_static = "1"
walkdir = "2"
chrono = { version = "0", features = ["serde"] }
html-builder = "0"
time-humanize = "0"
smol_str = { version = "0", features = ["serde"] }

# index
sprs = { version = "0", features = ["serde"] }

# network
url = "2"
ureq = { version = "3", default-features = false, features = ["rustls", "json", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging", "zlib"] }

# serde
serde_yaml = "*"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
tracing-chrome = "0.7"

# algo
fxhash = "0"
flate2 = "1"
libz-sys = { version = "*", features = ["static"] }
sha2 = "0"
rand = "0"
rand_chacha = "0"

# cli
clap = { version = "4", features = ["derive"] }
atty = "0"

# tests
criterion = "0"
mockito = "1"
tempfile = "*"
goldenfile = "1"

[profile.release]
lto = true
strip = true
opt-level = 's'
# Perform optimizations on all codegen units.
codegen-units = 1
