[metadata]
name = logreduce
summary = Extract anomalies from log files
description-file = README.rst
requires-python = >=3.5
author = Tristan Cacqueray
author-email = tdecacqu@redhat.com
home-page = https://logreduce.softwarefactory-project.io/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering

keywords = machine learning, ci, anomaly detection

[tool:pytest]
addopts = --verbose
python_files = logreduce/tests/*.py

[files]
packages = logreduce

[global]
setup-hooks = pbr.hooks.setup_hook

[build_sphinx]
build-dir = build/doc/
source-dir = doc/
all_files = 1

[upload_sphinx]
upload-dir = build/doc/html

[wheel]
universal = 1

[options.extras_require]
server = gear; voluptuous; alembic; sqlalchemy; cherrypy; routes

[entry_points]
console_scripts =
    logreduce = logreduce.cmd:main
    logreduce-client = logreduce.server.client:main [server]
    logreduce-server = logreduce.server.api:main    [server]
    logreduce-worker = logreduce.server.worker:main [server]
