[metadata]
name = logreduce
summary = Extract anomalies from log files
description_file = README.rst
requires_python = >=3.6
author = Tristan Cacqueray
author_email = tdecacqu@redhat.com
home_page = https://github.com/logreduce
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering

keywords = machine learning, ci, anomaly detection

[tool:pytest]
addopts = --verbose
python_files = logreduce/tests/*.py

[files]
packages = logreduce

[global]
setup-hooks = pbr.hooks.setup_hook

[build_sphinx]
build-dir = build/doc/
source-dir = doc/
all_files = 1

[upload_sphinx]
upload-dir = build/doc/html

[wheel]
universal = 1

[entry_points]
console_scripts =
    logreduce = logreduce.cmd:main

[mypy]
ignore_missing_imports = True
