[package]
name = "logreduce-cli"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-tokenizer"
documentation = "https://docs.rs/logreduce-tokenizer/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "A python binding for the logreduce project."

edition = "2018"

[dependencies]
logreduce-model = { path = "../model" }
clap = { version = "3", features = ["derive"] }
