[package]
name = "logreduce-cli"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-tokenizer"
documentation = "https://docs.rs/logreduce-tokenizer/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "A python binding for the logreduce project."

edition = "2018"

[dependencies]
anyhow = "1.0"
logreduce-model = { path = "../model" }
logreduce-report = { path = "../report" }
logreduce-iterator = { path = "../iterator" }
clap = { version = "3", features = ["derive"] }
atty = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
tracing-chrome = "0.5"

# debug helper
logreduce-tokenizer = { path = "../tokenizer" }
