[package]
name = "logreduce-index"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-tokenizer"
documentation = "https://docs.rs/logreduce-index/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "Vectorizer and index functions for the logreduce project."

edition = "2018"

[lib]
name = "logreduce_index"
path = "src/index.rs"

[dependencies]
sprs = "0.11"
fxhash = "0.2"
itertools = "0.10"
# fasthash = "0.4"

[dev-dependencies]
criterion = "0.3"
logreduce-generate = { path = "../generate" }

[[bench]]
name = "bench-index"
harness = false
