[package]
name = "logreduce-iterator"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-rust"
documentation = "https://docs.rs/logreduce-logfile-iterator/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "A memory efficient logfile iterator"

edition = "2018"

[lib]
name = "logreduce_iterator"
path = "src/iterator.rs"

[dependencies]
bytes = "1.1"
