[package]
name = "logreduce-model"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-rust"
documentation = "https://docs.rs/logreduce-logfile-iterator/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "The core logic of the logreduce project."

edition = "2018"

[lib]
name = "logreduce_model"
path = "src/model.rs"

[dependencies]
walkdir = "2.3"
logreduce-index = { path = "../index" }
logreduce-tokenizer = { path = "../tokenizer" }
logreduce-iterator = { path = "../iterator" }
serde = "1.0"

[dev-dependencies]
criterion = "0.3"
logreduce-generate = { path = "../generate" }

[[bench]]
name = "bench-model"
harness = false
