[package]
name = "logreduce-model"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-rust"
documentation = "https://docs.rs/logreduce-logfile-iterator/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "The core logic of the logreduce project."

edition = "2018"

[lib]
name = "logreduce_model"
path = "src/model.rs"

[dependencies]
anyhow = "1.0"
walkdir = "2.3"
logreduce-index = { path = "../index" }
logreduce-tokenizer = { path = "../tokenizer" }
logreduce-iterator = { path = "../iterator" }
logreduce-httpdir = { path = "../httpdir" }
logreduce-cache = { path = "../cache" }
zuul-build = { path = "../zuul" }
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate"] }
serde = "1.0"
tracing = "0.1"
lazy_static = "1.4.0"
itertools = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Model save/load
bincode = "1.3"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.3"
logreduce-generate = { path = "../generate" }
mockito = "0.31"

[[bench]]
name = "bench-model"
harness = false
