[package]
name = "logreduce-python"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-tokenizer"
documentation = "https://docs.rs/logreduce-tokenizer/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "A python binding for the logreduce project."

edition = "2018"

[lib]
name = "logreduce_binding"
crate-type = ["cdylib", "rlib"]
path = "src/bindings.rs"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[dependencies]
logreduce-tokenizer = { path = "../tokenizer" }
logreduce-generate = { path = "../generate" }
logreduce-index = { path = "../index" }

[workspace]
