[package]
name = "logreduce-cache"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-rust"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "Cache for content objects"

edition = "2018"

[lib]
name = "logreduce_cache"
path = "src/cache.rs"

[dependencies]
anyhow = { workspace = true }
xdg = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
flate2 = { workspace = true }
