[package]
name = "logreduce-cli"
version = "0.8.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
documentation = "https://docs.rs/logreduce/"
authors = ["TristanCacqueray"]

description = "A command line to extract anomaly from log files."

edition = "2018"

[[bin]]
name = "logreduce"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
logreduce-model = { path = "../model" }
logreduce-static-html = { path = "../static-html" }
logreduce-iterator = { path = "../iterator" }
logreduce-report = { path = "../report" }
clap = { workspace = true }
atty = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
tracing-chrome = { workspace = true }
time-humanize = { workspace = true }

# dataset eval
serde_yaml = { workspace = true }
serde = { workspace = true }

# debug helper
logreduce-tokenizer = { path = "../tokenizer" }
