[package]
name = "logreduce-cli"
description = "A command line to extract anomaly from log files."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "logreduce"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
logreduce-model = { path = "../model" }
logreduce-iterator = { path = "../iterator" }
logreduce-report = { path = "../report" }
clap = { workspace = true }
atty = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
tracing-chrome = { workspace = true }
time-humanize = { workspace = true }

# dataset eval
serde_yaml = { workspace = true }
serde = { workspace = true }

# debug helper
logreduce-tokenizer = { path = "../tokenizer" }
url = { workspace = true }
httpdir = { path = "../httpdir" }
