[package]
name = "logjuicer-cli"
description = "A command line to extract anomaly from log files."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
systemd-journal = ["logjuicer-model/systemd-journal"]

[[bin]]
name = "logjuicer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
logjuicer-model = { path = "../model" }
logjuicer-iterator = { path = "../iterator" }
logjuicer-report = { path = "../report" }
clap = { workspace = true }
atty = { workspace = true }
tracing = { workspace = true }
threadpool = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
tracing-chrome = { workspace = true }
time-humanize = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] }

# dataset eval
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }

# debug helper
logjuicer-tokenizer = { path = "../tokenizer" }
url = { workspace = true }
httpdir = { path = "../httpdir" }
