[package]
name = "logreduce-generate"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
documentation = "https://docs.rs/logreduce-generate/"
authors = ["TristanCacqueray"]

description = "Logfile generator for testing the logreduce project."

edition = "2018"

[lib]
name = "logreduce_generate"
path = "src/generate.rs"

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
