[package]
name = "logjuicer-generate"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
documentation = "https://docs.rs/logjuicer-generate/"
authors = ["TristanCacqueray"]

description = "Logfile generator for testing the logjuicer project."

edition = "2018"

[lib]
name = "logjuicer_generate"
path = "src/generate.rs"

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
