[package]
name = "logreduce-httpdir"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce-rust"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "Crawl http Index of page"

edition = "2018"

[lib]
name = "httpdir"
path = "src/httpdir.rs"

[dependencies]
threadpool = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
