[package]
name = "httpdir"
version = "0.1.1"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
authors = ["TristanCacqueray"]

description = "Crawl HTTP Index of page"

edition = "2018"

[lib]
name = "httpdir"
path = "src/httpdir.rs"

[dependencies]
threadpool = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
