[package]
name = "httpdir"
version = "0.2.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
authors = ["TristanCacqueray"]

description = "Crawl HTTP Index of page"

edition = "2018"

[lib]
name = "httpdir"
path = "src/httpdir.rs"

[dependencies]
threadpool = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
itertools = { workspace = true }
