[package]
name = "logjuicer-index"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer-tokenizer"
documentation = "https://docs.rs/logjuicer-index/"
authors = ["TristanCacqueray"]

description = "Vectorizer and index functions for the logjuicer project."

edition = "2018"

[lib]
name = "logjuicer_index"
path = "src/index.rs"

[dependencies]
sprs = { workspace = true }
fxhash = { workspace = true }
itertools = { workspace = true }
# fasthash = "0.4"
bincode = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
logjuicer-generate = { path = "../generate" }

[[bench]]
name = "bench-index"
harness = false
