[package]
name = "logjuicer-iterator"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
documentation = "https://docs.rs/logjuicer-iterator"
authors = ["TristanCacqueray"]

description = "A memory efficient logfile iterator"

edition = "2018"

[lib]
name = "logjuicer_iterator"
path = "src/iterator.rs"

[dependencies]
bytes = { workspace = true }
