[package]
name = "logjuicer-model"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
documentation = "https://docs.rs/logjuicer-model/"
authors = ["TristanCacqueray"]

description = "The core logic of the logjuicer project."

edition = "2018"

[lib]
name = "logjuicer_model"
path = "src/model.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
logjuicer-index = { path = "../index" }
logjuicer-report = { path = "../report" }
logjuicer-tokenizer = { path = "../tokenizer" }
logjuicer-iterator = { path = "../iterator" }
logjuicer-errors = { path = "../errors" }
httpdir = { path = "../httpdir" }
zuul-build = { path = "../zuul" }
prow-build = { path = "../prow" }
url = { workspace = true }
ureq = { workspace = true }
rustls = { workspace = true }
webpki-roots = "0.26"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }

# Model save/load
bincode = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
logjuicer-generate = { path = "../generate" }
mockito = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "bench-model"
harness = false
