[package]
name = "logjuicer-python"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer-tokenizer"
documentation = "https://docs.rs/logjuicer-tokenizer/"
authors = ["TristanCacqueray"]

description = "A python binding for the logjuicer project."

edition = "2018"

[lib]
name = "logjuicer_binding"
crate-type = ["cdylib", "rlib"]
path = "src/bindings.rs"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[dependencies]
logjuicer-tokenizer = { path = "../tokenizer" }
logjuicer-generate = { path = "../generate" }
logjuicer-index = { path = "../index" }

[workspace]
