[package]
name = "logreduce-report"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
authors = ["TristanCacqueray"]

description = "HTML report for the logreduce project."

edition = "2018"

[lib]
name = "logreduce_report"
path = "src/report.rs"

[dependencies]
html-builder = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
logreduce-model = { path = "../model" }

[[example]]
name = "render"
path = "src/render.rs"
