[package]
name = "logjuicer-report"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
authors = ["TristanCacqueray"]

description = "LogJuicer output report."

edition = "2018"

[lib]
name = "logjuicer_report"
path = "src/report.rs"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
itertools = { workspace = true }
url = { workspace = true, features = ["serde"] }

# Temporary solution for similarity report
bincode = { workspace = true }

# For IndexName...
logjuicer-tokenizer = { path = "../tokenizer" }

capnp = "0.18"

[build-dependencies]
capnpc = "0.18"

[dev-dependencies]
criterion = { workspace = true }
logjuicer-generate = { path = "../generate" }
serde_json = { workspace = true }
bincode = { workspace = true }

[[bench]]
name = "bench-report"
harness = false
