[package]
name = "logreduce-static-html"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logreduce/logreduce"
authors = ["TristanCacqueray"]

description = "HTML report for the logreduce project."

edition = "2018"

[lib]
name = "logreduce_static_html"
path = "src/static_html.rs"

[dependencies]
html-builder = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
logreduce-report = { path = "../report" }

[[example]]
name = "render"
path = "src/render.rs"
