[package]
name = "logjuicer-tokenizer"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer-tokenizer"
documentation = "https://docs.rs/logjuicer-tokenizer/"
authors = ["TristanCacqueray"]

description = "A tokenizer function for the logjuicer project."

keywords = ["parser", "machine-learning", "logjuicer"]
categories = ["compression", "development-tools", "parsing", "text-processing"]

edition = "2018"

[lib]
name = "logjuicer_tokenizer"
path = "src/tokenizer.rs"

[dependencies]
regex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
goldenfile = { workspace = true }
logjuicer-generate = { path = "../generate" }

[[bench]]
name = "bench-tokenizer"
harness = false
