[package]
name = "logreduce-web-service"
description = "A web-service to extract anomaly from log files."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "logreduce-api"
path = "src/api.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio-util = { version = "0.7", features = ["codec"] }
hyper = "0"
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["trace", "compression-deflate", "compression-gzip", "fs"] }

http = "0.2"
base64 = "0"
futures = "0.3"
sqlx = { version = "0", features = ["sqlite", "runtime-tokio", "chrono"] }
threadpool = { workspace = true }
itertools = { workspace = true }
html-builder = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

metrics-exporter-prometheus = "0.12.1"
metrics-process = "1.0.12"

logreduce-report = { path = "../report" }
logreduce-model = { path = "../model" }
